[tool.poetry]
name = "wsl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
aiofiles = "^23.2.1"
pyright = "^1.1.327"
requests = "^2.31.0"
fake-useragent = "^1.2.1"
selenium = "^4.12.0"
black = "^23.9.1"
aiocsv = "^1.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="/home/mimfort/.cache/pypoetry/virtualenvs/"
venv="wsl-wmwNiQNL-py3.10"
